k8s/gitops/infrastructure/oauth2-proxy/flux-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: oauth2-proxy
spec:
  parentRefs:
    - name: public
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - "flux.${DOMAIN_NAME}"
  rules:
    - backendRefs:
        - name: flux-web-oauth2-proxy
          port: 80
